# timetracker

./: README.md
Client/: CMakeLists.txt  LICENSE.txt  main.cpp  raygui.h
Server/: index.html  index.js  package-lock.json  package.json  timetracker.sqlite3
